# polly

./: .gitignore  LICENSE  Makefile  README.html  README.md  TODO  common-words  polly-one.cfg  polly-short.cfg  polly-two.cfg  polly.cfg  polly.cfg.sample  polly.py  pyproject.toml  requirements.txt
.github/workflows/: polly-test.yml
polly/: polly.py  reader.py
src/: polly.py  reader.py
tests/: polly-test.pkl  runtests.sh
tests/cfgs/: test-ff53.cfg  test-ft53.cfg  test-tf53.cfg  test-tt62.cfg  test-u64.cfg  test-xkcd.cfg
tests/output/: expected.out
