[tool.poetry]
name = "polly"
version = "1.1.1"
description = "Generate modified XKCD-936 passwords from personal word lists"
authors = ["Skip Montanaro <skip.montanaro@gmail.com>"]
license = "MPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
polly = 'polly.polly:main'
